Added S3 process to allow for fetching and publishing to S3 compliant storage