@@ -20,7 +20,6 @@ import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.lattejava.BaseUnitTest;
 import org.testng.annotations.Test;
@@ -39,12 +38,12 @@ public class ArchiveFileSetTest extends BaseUnitTest {
   public void toFileInfosNoPrefix() throws Exception {
     ArchiveFileSet fileSet = new ArchiveFileSet(projectDir.resolve("src/main/java"), null);
     List<FileInfo> infos = fileSet.toFileInfos();
-    assertEquals(infos.size(), 115);
+    assertEquals(infos.size(), 118);
     // Spot-check a few known files
-    List<Path> origins = infos.stream().map((info) -> info.origin).collect(Collectors.toList());
+    List<Path> origins = infos.stream().map((info) -> info.origin).toList();
     assertTrue(origins.contains(projectDir.resolve("src/main/java/org/lattejava/io/FileSet.java")));
     assertTrue(origins.contains(projectDir.resolve("src/main/java/org/lattejava/io/Copier.java")));
-    List<Path> relatives = infos.stream().map((info) -> info.relative).collect(Collectors.toList());
+    List<Path> relatives = infos.stream().map((info) -> info.relative).toList();
     assertTrue(relatives.contains(Paths.get("org/lattejava/io/FileSet.java")));
     assertTrue(relatives.contains(Paths.get("org/lattejava/io/Copier.java")));
   }
@@ -53,12 +52,12 @@ public class ArchiveFileSetTest extends BaseUnitTest {
   public void toFileInfosWithPrefix() throws Exception {
     ArchiveFileSet fileSet = new ArchiveFileSet(projectDir.resolve("src/main/java"), "some-directory-1.0");
     List<FileInfo> infos = fileSet.toFileInfos();
-    assertEquals(infos.size(), 115);
+    assertEquals(infos.size(), 118);
     // Spot-check origins are unchanged (prefix doesn't affect origin)
-    List<Path> origins = infos.stream().map((info) -> info.origin).collect(Collectors.toList());
+    List<Path> origins = infos.stream().map((info) -> info.origin).toList();
     assertTrue(origins.contains(projectDir.resolve("src/main/java/org/lattejava/io/FileSet.java")));
     // Spot-check relative paths include the prefix
-    List<Path> relatives = infos.stream().map((info) -> info.relative).collect(Collectors.toList());
+    List<Path> relatives = infos.stream().map((info) -> info.relative).toList();
     assertTrue(relatives.contains(Paths.get("some-directory-1.0/org/lattejava/io/FileSet.java")));
     assertTrue(relatives.contains(Paths.get("some-directory-1.0/org/lattejava/io/Copier.java")));
   }
@@ -67,12 +66,12 @@ public class ArchiveFileSetTest extends BaseUnitTest {
   public void toFileInfosWithDeepPrefix() throws Exception {
     ArchiveFileSet fileSet = new ArchiveFileSet(projectDir.resolve("src/main/java"), "usr/local/inversoft/main");
     List<FileInfo> infos = fileSet.toFileInfos();
-    assertEquals(infos.size(), 115);
+    assertEquals(infos.size(), 118);
     // Spot-check origins
-    List<Path> origins = infos.stream().map((info) -> info.origin).collect(Collectors.toList());
+    List<Path> origins = infos.stream().map((info) -> info.origin).toList();
     assertTrue(origins.contains(projectDir.resolve("src/main/java/org/lattejava/io/FileSet.java")));
     // Spot-check relative paths include the deep prefix
-    List<Path> relatives = infos.stream().map((info) -> info.relative).collect(Collectors.toList());
+    List<Path> relatives = infos.stream().map((info) -> info.relative).toList();
     assertTrue(relatives.contains(Paths.get("usr/local/inversoft/main/org/lattejava/io/FileSet.java")));
 
     Set<Directory> directories = fileSet.toDirectories();
